--- a/paper/macros.tex
+++ b/paper/macros.tex
@@ -517,4 +517,5 @@
 \newcommand{\filler}{\hspace{0.9\textwidth}}
 \newcommand{\tighten}{\vspace{-1ex}}
 \newcommand{\permb}[2]{\left\{{#1}\leftrightsquigarrow{#2}\right\}}
+\newcommand{\open}[3]{\left\{{#1}\leadsto{#2}\right\}{#3}}
 \newcommand{\tpcp}{\tpvdash_{cp}}
