--- a/paper/paper.bib
+++ b/paper/paper.bib
@@ -13,6 +13,20 @@
  address = {New York, NY, USA},
  keywords = {affine types, linear logic, modules, polymorphism, type systems},
 }
+@book{SF,
+  author = {Benjamin C. Pierce and Chris Casinghino and Marco Gaboardi and
+                  Michael Greenberg and C\v{a}t\v{a}lin Hri\c{t}cu 
+                  and Vilhelm Sjoberg and Brent Yorgey},
+  title = {Software Foundations},
+  year = {2014},
+  publisher = {Electronic textbook},
+  plclub = {Yes},
+  bcp = {Yes},
+  keys = {poplmark,books},
+  url = {http://www.cis.upenn.edu/~bcpierce/sf},
+  ebook = {http://www.cis.upenn.edu/~bcpierce/sf},
+  japanese = {http://proofcafe.org/sf}
+}
 @inproceedings{Aldrich:2009,
  author = {Aldrich, Jonathan and Sunshine, Joshua and Saini, Darpan and
                   Sparks, Zachary},
@@ -327,7 +341,6 @@ language={English}
  journal = {Mathematical Structures in Computer Science, Special Issue on
                   Behavioural Types},
  year = {2014},
- note = {To appear.},
 }
 @article{Gay:2005:SST,
  author = {Gay, Simon and Hole, Malcolm},
