Trimming the biblography.

--- a/paper/paper.bib
+++ b/paper/paper.bib
@@ -1,9 +1,7 @@
 @inproceedings{Tov:2011,
  author = {Tov, Jesse A. and Pucella, Riccardo},
  title = {Practical Affine Types},
- booktitle = {Proceedings of the 38th Annual ACM SIGPLAN-SIGACT Symposium on
-                  Principles of Programming Languages},
- series = {POPL '11},
+ booktitle = {POPL '11},
  year = {2011},
  location = {Austin, Texas, USA},
  pages = {447--458},
@@ -31,10 +29,7 @@
  author = {Aldrich, Jonathan and Sunshine, Joshua and Saini, Darpan and
                   Sparks, Zachary},
  title = {Typestate-oriented Programming},
- booktitle = {Proceedings of the 24th ACM SIGPLAN Conference Companion on
-                  Object Oriented Programming Systems Languages and
-                  Applications},
- series = {OOPSLA '09},
+ booktitle = {OOPSLA '09},
  year = {2009},
  location = {Orlando, Florida, USA},
  pages = {1015--1022},
@@ -49,9 +44,7 @@
  author = {Gay, Simon J. and Vasconcelos, Vasco T. and Ravara, Ant\'{o}nio and
                   Gesbert, Nils and Caldeira, Alexandre Z.},
  title = {Modular Session Types for Distributed Object-oriented Programming},
- booktitle = {Proceedings of the 37th Annual ACM SIGPLAN-SIGACT Symposium on
-                  Principles of Programming Languages},
- series = {POPL '10},
+ booktitle = {POPL '10},
  year = {2010},
  location = {Madrid, Spain},
  pages = {299--312},
@@ -98,9 +91,7 @@
  author = {Gay, Simon J.},
  title = {A Framework for the Formalisation of Pi Calculus Type Systems in
           Isabelle/HOL},
- booktitle = {Proceedings of the 14th International Conference on Theorem
-              Proving in Higher Order Logics},
- series = {TPHOLs '01},
+ booktitle = {TPHOLs '01},
  year = {2001},
  pages = {217--232},
  numpages = {16},
@@ -138,9 +129,7 @@
                   Kwangkeun},
  title = {GMETA: A Generic Formal Metatheory Framework for First-order
                   Representations},
- booktitle = {Proceedings of the 21st European Conference on Programming
-                  Languages and Systems},
- series = {ESOP'12},
+ booktitle = {ESOP'12},
  year = {2012},
  location = {Tallinn, Estonia},
  pages = {436--455},
@@ -167,9 +156,7 @@ numpages = {35},
  author = {Mazurak, Karl and Zdancewic, Steve},
  title = {Lolliproc: To Concurrency from Classical Linear Logic via
 Curry-howard and Control},
- booktitle = {Proceedings of the 15th ACM SIGPLAN International Conference on
-Functional Programming},
- series = {ICFP '10},
+ booktitle = {ICFP '10},
  year = {2010},
  location = {Baltimore, Maryland, USA},
  pages = {39--50},
@@ -182,9 +169,7 @@ Functional Programming},
 @inproceedings{Mazurak:2010:LLT,
  author = {Mazurak, Karl and Zhao, Jianzhou and Zdancewic, Steve},
  title = {Lightweight Linear Types in System F${}^\circ$},
- booktitle = {Proceedings of the 5th ACM SIGPLAN Workshop on Types in Language
-                  Design and Implementation},
- series = {TLDI '10},
+ booktitle = {TLDI '10},
  year = {2010},
  location = {Madrid, Spain},
  pages = {77--88},
@@ -227,9 +212,7 @@ Functional Programming},
                   and Vytiniotis, Dimitrios and Washburn, Geoffrey and
                   Weirich, Stephanie and Zdancewic, Steve},
  title = {Mechanized Metatheory for the Masses: The PoplMark Challenge},
- booktitle = {Proceedings of the 18th International Conference on Theorem
-                  Proving in Higher Order Logics},
- series = {TPHOLs'05},
+ booktitle = {TPHOLs'05},
  year = {2005},
  location = {Oxford, UK},
  pages = {50--65},
@@ -255,9 +238,7 @@ language={English}
  author = {Aydemir, Brian and Chargu{\'e}raud, Arthur and Pierce, Benjamin
                   C. and Pollack, Randy and Weirich, Stephanie},
  title = {Engineering Formal Metatheory},
- booktitle = {Proceedings of the 35th Annual ACM SIGPLAN-SIGACT Symposium on
-                  Principles of Programming Languages},
- series = {POPL '08},
+ booktitle = {POPL '08},
  year = {2008},
  location = {San Francisco, California, USA},
  pages = {3--15},
@@ -293,9 +274,7 @@ language={English}
 @inproceedings{Caires:2010:STI,
  author = {Caires, Lu\'{\i}s and Pfenning, Frank},
  title = {Session Types As Intuitionistic Linear Propositions},
- booktitle = {Proceedings of the 21st International Conference on Concurrency
-                  Theory},
- series = {CONCUR'10},
+ booktitle = {CONCUR'10},
  year = {2010},
  location = {Paris, France},
  pages = {222--236},
@@ -322,9 +301,7 @@ language={English}
  author = {F\"{a}hndrich, Manuel and DeLine, Robert},
  title = {Adoption and Focus: Practical Linear Types for Imperative
                   Programming},
- booktitle = {Proceedings of the ACM SIGPLAN 2002 Conference on Programming
-                  Language Design and Implementation},
- series = {PLDI '02},
+ booktitle = {PLDI '02},
  year = {2002},
  location = {Berlin, Germany},
  pages = {13--24},
@@ -360,9 +337,7 @@ language={English}
 @inproceedings{Delahaye:2000:TLS,
  author = {Delahaye, David},
  title = {A Tactic Language for the System Coq},
- booktitle = {Proceedings of the 7th International Conference on Logic for
-                  Programming and Automated Reasoning},
- series = {LPAR'00},
+ booktitle = {LPAR'00},
  year = {2000},
  location = {Reunion Island, France},
  pages = {85--95},
@@ -374,9 +349,7 @@ language={English}
 @inproceedings{Chlipala:2008:PHOAS,
  author = {Chlipala, Adam},
  title = {Parametric Higher-order Abstract Syntax for Mechanized Semantics},
- booktitle = {Proceedings of the 13th ACM SIGPLAN International Conference on
-                  Functional Programming},
- series = {ICFP '08},
+ booktitle = {ICFP '08},
  year = {2008},
  location = {Victoria, BC, Canada},
  pages = {143--156},
