--- a/paper/paper.bib
+++ b/paper/paper.bib
@@ -1,3 +1,10 @@
+@phdthesis{McBride:1999,
+ author = {McBride, Conor},
+ title = {Dependently Typed Functional Programs and their Proofs},
+ school = {University of Edinburgh},
+ year = {1999},
+ url = {http://www.lfcs.informatics.ed.ac.uk/reports/00/ECS-LFCS-00-419/},
+}
 @inproceedings{Tov:2011,
  author = {Tov, Jesse A. and Pucella, Riccardo},
  title = {Practical Affine Types},
